# cvlint

./: .gitignore  README.md  pyproject.toml
src/cvlint/: cli.py  main.py
tests/: conftest.py  test_cli_integration.py  test_pdf_validation.py  utils.py
